--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -22,6 +22,6 @@ jobs:
         run: npm install --global surge
 
       - name: Deploy a Surge
-        run: surge ./ --domain Jana-Parcial-01.surge.sh
+        run: surge ./ --domain JanaricBJ-Parcial-01E.surge.sh
         env:
           SURGE_TOKEN: ${{ secrets.SURGE_TOKEN }}
